--- a/src/style.scss
+++ b/src/style.scss
@@ -44,3 +44,13 @@
   margin-bottom: 10px;
 }
 
+.next-piece-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 140px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 2px solid #212529;
+}
