--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,8 @@ legend {
 
 .pause-overlay,
 .game-over-overlay,
-.new-game-overlay {
+.new-game-overlay,
+.game-overlay {
     display: none;
     position: absolute;
     top: 0;
