--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Pixel';
+  src: url('../assets/fonts/PixelEmulator.woff2') format('woff2');
+}
+
+@layer base {
+html {
+  font-family: Pixel, system-ui, sans-serif;
+}
+}
