--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,9 @@
 }
 
 @layer base {
-html {
-  font-family: Pixel, system-ui, sans-serif;
-}
+  .game-layout {
+    font-family: Pixel, system-ui, sans-serif;
+    background-image: linear-gradient(45deg, theme('colors.gray.900') 50%, theme('colors.gray.800') 50%);
+    background-size: 12px 12px;
+  }
 }
