--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,39 @@
 @layer base {
   .game-layout {
     font-family: Pixel, system-ui, sans-serif;
-    background-image: linear-gradient(45deg, theme('colors.gray.900') 50%, theme('colors.gray.800') 50%);
-    background-size: 12px 12px;
+    background-image:  linear-gradient(theme('colors.gray.800') 1px, transparent 1px), linear-gradient(to right, theme('colors.gray.800') 1px, theme('colors.gray.900') 1px);
+    background-size: 20px 20px;
+  }
+
+  .font-outline {
+    -webkit-text-stroke-width: 2px;
+  }
+
+  .font-outline-blue {
+    -webkit-text-stroke-color: theme('colors.blue.600');
+  }
+
+  .font-outline-green {
+    -webkit-text-stroke-color: theme('colors.green.600');
+  }
+
+  .font-outline-red {
+    -webkit-text-stroke-color: theme('colors.red.600');
+  }
+
+  .font-outline-orange {
+    -webkit-text-stroke-color: theme('colors.orange.600');
+  }
+
+  .font-outline-yellow {
+    -webkit-text-stroke-color: theme('colors.yellow.500');
+  }
+
+  .font-outline-cyan {
+    -webkit-text-stroke-color: theme('colors.cyan.500');
+  }
+
+  .font-outline-purple {
+    -webkit-text-stroke-color: theme('colors.purple.600');
   }
 }
